# Class-Widgets

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  app.py  basic_dirs.py  conf.py  cses_mgr.py  data_model.py  exact_menu.py  extra_menu.py  file.py  generate_speech.py  i18n_manager.py  list.py  list_.py  main.py  menu-advance.ui  menu.py  network_thread.py  play_audio.py  plugin.py  plugin_plaza.py  pyproject.toml  requirements.linux.txt  requirements.txt  splash.py  tip_toast.py  utils.py  weather.py  weather_db.py
.github/: CONTRIBUTING.md  FUNDING.yml  cliff.nightly.toml  cliff.toml  pull.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: Feature.yaml
.github/ISSUE_TEMPLATE/: BugReport.yml  I18nReport.yml  PluginsRequest.yml  config.yml
.github/actions/sign/: action.yml
.github/workflows/: build.yml  cache_clear.yml  code_check.yml  i18n.yml  lint.yml  nightly.yml  package.yml  pushToWebsite.yml  release.yml  sign.yml  verify_pr.yml
Scripts/: buildLinux.sh  buildOSX.sh  buildWin.bat
config/: completed_i18n.json  config.json  default.json  default_config.json  mirror.json  schedule_db.json
config/data/: open_meteo_status.json  weather_api.json  xiaomi_weather_status.json
data/: completed_i18n.json  default_config.json  default_schedule.json  mirror.json  open_meteo_status.json  weather_api.json
deb/DEBIAN/: control  copyright
deb/debian/: control
deb/opt/apps/cn.rinlit.classwidgets/: info
deb/opt/apps/cn.rinlit.classwidgets/entries/applications/: cn.rinlit.classwidgets.desktop
docs/contributing/: CONTRIBUTING.en_US.md  CONTRIBUTING.ja.md
docs/readme/: README.en_US.md  README.ja.md
font/: LICENSE.txt
i18n/: base.ts  bo.qm  bo.ts  en_US.qm  en_US.ts  ja_JP.qm  ja_JP.ts  ug.qm  ug.ts  zh_CN.qm  zh_CN.ts  zh_HK.qm  zh_HK.ts  zh_SIMPLIFIED.qm  zh_SIMPLIFIED.ts
img/: favicon.icns
installer/: ClassWidgets.wxs  cleanup.vbs
package/uos/: info
package/uos/control/: control  postinst  postrm
package/uos/entries/applications/: cn.rinlit.classwidgets.desktop
ui/default/: theme.json  widget-countdown.ui  widget-current-activity.ui  widget-next-activity.ui  widget-time.ui  widget-weather.ui
ui/default/dark/: widget-weather.ui
ui/default/i18n/: bo.ts  en_US.ts  ja_JP.ts  ug.ts  zh_CN.ts  zh_HK.ts  zh_SIMPLIFIED.qm  zh_SIMPLIFIED.ts
ui/hoshino/: theme.json
ui/hoshino/dark/: widget-weather.ui
ui/hoshino/i18n/: bo.ts  en_US.qm  en_US.ts  ja_JP.qm  ja_JP.ts  ug.qm  ug.ts  zh_CN.ts  zh_HK.qm  zh_HK.ts  zh_SIMPLIFIED.ts
ui/minimize/: theme.json  widget-base.ui  widget-weather.ui
ui/minimize/dark/: widget-weather.ui
ui/minimize/i18n/: bo.ts  en_US.qm  en_US.ts  ja_JP.qm  ja_JP.ts  ug.qm  ug.ts  zh_CN.qm  zh_CN.ts  zh_HK.qm  zh_HK.ts  zh_SIMPLIFIED.qm  zh_SIMPLIFIED.ts
ui/shiroko/: theme.json  widget-weather.ui
ui/shiroko/i18n/: bo.ts  en_US.ts  ja_JP.ts  ug.ts  zh_CN.qm  zh_CN.ts  zh_HK.ts  zh_SIMPLIFIED.ts
view/: extra_menu.ui  splash.ui  splash1.ui  widget-toast-bar.ui
view/menu/: about.ui  advance.ui  configs.ui  countdown_custom_edit.ui  custom.ui  file_item.ui  help.ui  plugin_mgr.ui  preview.ui  schedule_db_edit.ui  schedule_edit.ui  sound.ui  subject.ui  timeline_edit.ui  tts_settings.ui  weather.ui  weather_alert_card.ui  weather_alert_msgbox.ui
view/pp/: home.ui  latests.ui  plugin_detail.ui  search.ui  settings.ui
